--- a/lessom2_1.ipynb
+++ b/lessom2_1.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "發生錯誤\n"
+      "學生的分數:233分\n"
      ]
     }
    ],
@@ -170,6 +170,43 @@
     "    print('丙')\n",
     "else:\n",
     "    print('丁')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您輸入的格式錯誤\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    height=eval(input(\"請輸入身高(cm):\"))\n",
+    "    weight=eval(input(\"請輸入體重(kg)\"))\n",
+    "    BMI=weight / (height/100)**2\n",
+    "    print(f\"身高:{height}公分\")\n",
+    "    print(f\"體重:{weight}公斤\")\n",
+    "    print(f\"BMI:{BMI:.1f}\")\n",
+    "    if BMI < 18.5:\n",
+    "        print('體重過輕')\n",
+    "    elif BMI < 24:\n",
+    "        print('正常範圍')\n",
+    "    elif BMI < 27:\n",
+    "        print('過重')\n",
+    "    elif BMI < 30:\n",
+    "        print('輕度肥胖')\n",
+    "    elif BMI <35:\n",
+    "        print('中度肥胖')\n",
+    "    else:\n",
+    "        print('重度肥胖')\n",
+    "except :\n",
+    "    print('您輸入的格式錯誤')"
    ]
   }
  ],
