--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -170,6 +170,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 求公因數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入格式錯誤\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    num=int(input(\"請輸入一個整數\"))\n",
+    "    print(f\"{num}的因數是:\",end=' ')\n",
+    "    for i in range(1,num+1):\n",
+    "        if num%i ==0:\n",
+    "            print(i,end=' ')\n",
+    "except :\n",
+    "    print(\"輸入格式錯誤\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## while 迴圈\n",
     "- 使用時機 : 不知道執行的次數\n",
     "- 小心變成無窮迴圈"
