--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入格式錯誤\n"
+      "30的因數是: 1 2 3 5 6 10 15 30 "
      ]
     }
    ],
@@ -191,9 +191,9 @@
     "    num=int(input(\"請輸入一個整數\"))\n",
     "    print(f\"{num}的因數是:\",end=' ')\n",
     "    for i in range(1,num+1):\n",
-    "        if num%i ==0:\n",
+    "        if num % i == 0:\n",
     "            print(i,end=' ')\n",
-    "except :\n",
+    "except Exception :\n",
     "    print(\"輸入格式錯誤\")"
    ]
   },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,13 +221,13 @@
    ],
    "source": [
     "#小明想要存錢買一輛機車，機車每輛30000元，他將每月存的錢輸入，當存款足夠乃機車時，就顯示訊息告知\n",
-    "deposit = 0\n",
+    "deposit = 0    #建立控制迴圈的變數\n",
     "month = 0\n",
     "\n",
-    "while (deposit < 30000):\n",
+    "while (deposit < 30000):    #比較變數\n",
     "    month +=1\n",
     "    money=int(input(f\"請輸入第{month}月份的存款:\"))\n",
-    "    deposit += money\n",
+    "    deposit += money     #改變變數的值\n",
     "print(f\"恭喜!你已經存夠錢了，存了{month}個月的存款為:{deposit}元\")"
    ]
   }
