--- a/lesson4/lesson4_3.ipynb
+++ b/lesson4/lesson4_3.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 猜數字遊戲"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -83,8 +90,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BMI資料"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -92,28 +106,28 @@
      "output_type": "stream",
      "text": [
       "BMI計算機\n",
-      "姓名:xxh\n",
-      "請輸入身高(cm):170\n",
+      "姓名:徐熙鴻\n",
+      "請輸入身高(cm):165\n",
       "請輸入體重(kg):58\n",
-      "xxh的BMI值:20.07\n",
-      "xxh的體重:正常範圍\n",
+      "徐熙鴻的BMI值:21.30\n",
+      "徐熙鴻的體重:正常範圍\n",
       "==============\n",
       "BMI計算機\n",
-      "姓名:ert\n",
-      "請輸入身高(cm):156\n",
-      "請輸入體重(kg):43\n",
-      "ert的BMI值:17.67\n",
-      "ert的體重:體重過輕\n",
+      "姓名:涂宏影\n",
+      "請輸入身高(cm):172\n",
+      "請輸入體重(kg):65\n",
+      "涂宏影的BMI值:21.97\n",
+      "涂宏影的體重:正常範圍\n",
       "==============\n",
       "BMI計算機\n",
       "輸入格式錯誤,請重新輸入\n",
       "==============\n",
       "BMI計算機\n",
-      "姓名:kkk\n",
-      "請輸入身高(cm):180\n",
-      "請輸入體重(kg):76\n",
-      "kkk的BMI值:23.46\n",
-      "kkk的體重:正常範圍\n",
+      "姓名:酷哥\n",
+      "請輸入身高(cm):145\n",
+      "請輸入體重(kg):54\n",
+      "酷哥的BMI值:25.68\n",
+      "酷哥的體重:過重\n",
       "==========\n",
       "應用程式結束\n"
      ]
@@ -143,6 +157,143 @@
     "            print(f\"{name}的體重:正常範圍\")\n",
     "        else:\n",
     "            print(f\"{name}的體重:體重過輕\")\n",
+    "        answer=input(\"您還要繼續嗎?(y繼續,n結束)\")\n",
+    "        if answer.upper() == 'N':\n",
+    "            break\n",
+    "        print(\"==============\")\n",
+    "    except Exception :\n",
+    "        print(\"輸入格式錯誤,請重新輸入\")\n",
+    "        print(\"==============\")\n",
+    "print(\"==========\")        \n",
+    "print(\"應用程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 沒有傳出值的function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMI計算機\n",
+      "姓名:徐熙鴻\n",
+      "請輸入身高(cm):177\n",
+      "請輸入體重(kg):58\n",
+      "徐熙鴻的BMI值:18.51\n",
+      "徐熙鴻的體重:正常範圍\n",
+      "==========\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_status(name:str,BMI:int)->None:  #沒有傳出值的function\n",
+    "        if BMI >=35:\n",
+    "            print(f\"{name}的體重:重度肥胖\")\n",
+    "        elif BMI >= 30:\n",
+    "            print(f\"{name}的體重:中度肥胖\")\n",
+    "        elif BMI >= 27:\n",
+    "            print(f\"{name}的體重:輕度肥胖\")\n",
+    "        elif BMI >= 24:\n",
+    "            print(f\"{name}的體重:過重\")\n",
+    "        elif BMI >= 18.5:\n",
+    "            print(f\"{name}的體重:正常範圍\")\n",
+    "        else:\n",
+    "            print(f\"{name}的體重:體重過輕\")\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        print(\"BMI計算機\")\n",
+    "        name=input(\"請輸入姓名:\")\n",
+    "        height = eval(input(\"請輸入身高(cm):\"))\n",
+    "        weight = eval(input(\"請輸入體重(kg):\"))\n",
+    "        BMI = weight / ((height/100)**2)\n",
+    "        print(f\"姓名:{name}\")\n",
+    "        print(f\"請輸入身高(cm):{height}\")\n",
+    "        print(f\"請輸入體重(kg):{weight}\")\n",
+    "        print(f\"{name}的BMI值:{BMI:.2f}\")\n",
+    "\n",
+    "        get_status(name,BMI)\n",
+    "\n",
+    "        answer=input(\"您還要繼續嗎?(y繼續,n結束)\")\n",
+    "        if answer.upper() == 'N':\n",
+    "            break\n",
+    "        print(\"==============\")\n",
+    "    except Exception :\n",
+    "        print(\"輸入格式錯誤,請重新輸入\")\n",
+    "        print(\"==============\")\n",
+    "print(\"==========\")        \n",
+    "print(\"應用程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 有傳出值的function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMI計算機\n",
+      "姓名:徐熙鴻\n",
+      "請輸入身高(cm):164\n",
+      "請輸入體重(kg):57\n",
+      "徐熙鴻的BMI值:21.19\n",
+      "徐熙鴻的體重:正常範圍\n",
+      "==========\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_status(BMI:int)->str:  #有傳出值的function\n",
+    "        if BMI >=35:\n",
+    "            status = \"重度肥胖\"\n",
+    "        elif BMI >= 30:\n",
+    "            status = \"中度肥胖\"\n",
+    "        elif BMI >= 27:\n",
+    "            status = \"輕度肥胖\"\n",
+    "        elif BMI >= 24:\n",
+    "            status = \"過重\"\n",
+    "        elif BMI >= 18.5:\n",
+    "            status = \"正常範圍\"\n",
+    "        else:\n",
+    "            status = \"體重過輕\"\n",
+    "\n",
+    "        return status\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        print(\"BMI計算機\")\n",
+    "        name=input(\"請輸入姓名:\")\n",
+    "        height = eval(input(\"請輸入身高(cm):\"))\n",
+    "        weight = eval(input(\"請輸入體重(kg):\"))\n",
+    "        BMI = weight / ((height/100)**2)\n",
+    "        print(f\"姓名:{name}\")\n",
+    "        print(f\"請輸入身高(cm):{height}\")\n",
+    "        print(f\"請輸入體重(kg):{weight}\")\n",
+    "        print(f\"{name}的BMI值:{BMI:.2f}\")\n",
+    "\n",
+    "        status = get_status(BMI)\n",
+    "        print(f\"{name}的體重:{status}\")\n",
+    "\n",
     "        answer=input(\"您還要繼續嗎?(y繼續,n結束)\")\n",
     "        if answer.upper() == 'N':\n",
     "            break\n",
