--- a/lesson6/lesson6_4.ipynb
+++ b/lesson6/lesson6_4.ipynb
@@ -2,30 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "姓名:王怡君\n",
-      "身高:178\n",
-      "體重:63\n",
-      "BMI:19.88\n",
-      "狀態:正常範圍\n",
+      "姓名:余月修\n",
+      "身高:163\n",
+      "體重:76\n",
+      "BMI:28.6\n",
+      "狀態:輕度肥胖\n",
       "=========================\n",
-      "姓名:彭茹靖\n",
-      "身高:158\n",
-      "體重:100\n",
-      "BMI:40.06\n",
-      "狀態:重度肥胖\n",
+      "姓名:郭致恬\n",
+      "身高:184\n",
+      "體重:90\n",
+      "BMI:26.58\n",
+      "狀態:過重\n",
       "=========================\n",
-      "姓名:高俊男\n",
-      "身高:169\n",
+      "姓名:鄭淑珍\n",
+      "身高:176\n",
       "體重:91\n",
-      "BMI:31.86\n",
-      "狀態:中度肥胖\n",
+      "BMI:29.38\n",
+      "狀態:輕度肥胖\n",
       "=========================\n"
      ]
     }
@@ -35,7 +35,7 @@
     "def get_name(nums:int=2)->list[str]:\n",
     "    with open('names.txt',mode='r',encoding='utf-8') as file:\n",
     "        names_str = file.read()\n",
-    "    names = names_str.split()\n",
+    "    names = names_str.split(sep=\"\\n\")\n",
     "    names = random.choices(names,k=nums)\n",
     "    return  names\n",
     "\n",
@@ -69,10 +69,11 @@
     "    return students\n",
     "\n",
     "nums = int(input('請輸入人數:'))\n",
+    "# names:list[str]=get_name(nums=nums)\n",
     "students = generate_bmi(get_name(nums=nums))\n",
     "# print(students)\n",
-    "for name in students:\n",
-    "    for key,value in name.items():\n",
+    "for student in students:\n",
+    "    for key,value in student.items():\n",
     "        print(f'{key}:{value}')\n",
     "    print('=========================')"
    ]
