--- a/lesson7/lesson7_4.ipynb
+++ b/lesson7/lesson7_4.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
     "        return status\n",
     "\n",
     "def get_bmi(names:list[str])->list[BMI]:\n",
-    "    students = []\n",
+    "    students:list[BMI] = []\n",
     "    for name in names:\n",
     "        height = random.randint(140,190)\n",
     "        weight = random.randint(50, 110)\n",
@@ -164,16 +164,75 @@
     "        students.append(bmi)\n",
     "    return students\n",
     "\n",
-    "nums = int(input(\"請輸入人數:\"))\n",
-    "names = get_name(nums=nums)\n",
-    "students = get_bmi(names=names)\n",
-    "for student in students:\n",
-    "    print(f'姓名:{student.name}')\n",
-    "    print(f'身高:{student.height}')\n",
-    "    print(f'體重:{student.weight}')\n",
-    "    print(f'BMI:{student.get_bmi()}')\n",
-    "    print(f'狀態:{student.get_status()}')\n",
-    "    print('='*20)"
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    nums = int(input(\"請輸入人數:\"))\n",
+    "    names = get_name(nums=nums)\n",
+    "    students = get_bmi(names=names)\n",
+    "    for student in students:\n",
+    "        print(f'姓名:{student.name}')\n",
+    "        print(f'身高:{student.height}')\n",
+    "        print(f'體重:{student.weight}')\n",
+    "        print(f'BMI:{student.get_bmi()}')\n",
+    "        print(f'狀態:{student.get_status()}')\n",
+    "        print('='*20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import csv\n",
+    "\n",
+    "def get_name(nums:int=2)->list[str]:\n",
+    "    with open('names.txt',mode='r',encoding='utf-8') as file:\n",
+    "        names_str = file.read()\n",
+    "    names = names_str.split(sep='\\n')\n",
+    "    names = random.choices(names,k=nums)\n",
+    "    return names\n",
+    "\n",
+    "\n",
+    "def get_bmi(names:list[str])->list[dict]:\n",
+    "    students:list[dict] = []\n",
+    "    for name in names:\n",
+    "        height = random.randint(140,190)\n",
+    "        weight = random.randint(50, 110)\n",
+    "        BMI = weight / ((height/100)**2)\n",
+    "        if BMI >= 35:\n",
+    "            status = \"重度肥胖\"\n",
+    "        elif BMI >= 30:\n",
+    "            status = \"中度肥胖\"\n",
+    "        elif BMI >= 27:\n",
+    "            status = \"輕度肥胖\"\n",
+    "        elif BMI >= 24:\n",
+    "            status = \"過重\"\n",
+    "        elif BMI >= 18.5:\n",
+    "            status = \"正常範圍\"\n",
+    "        else:\n",
+    "            status = \"體重過輕\"\n",
+    "        student = {\n",
+    "            '姓名':name,\n",
+    "            '身高':height,\n",
+    "            '體重':weight,\n",
+    "            'BMI':round(BMI,2),\n",
+    "            '狀態':status\n",
+    "        }\n",
+    "        students.append(student)\n",
+    "    return students\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    nums = int(input(\"請輸入人數:\"))\n",
+    "    names = get_name(nums=nums)\n",
+    "    students:list[dict] = get_bmi(names=names)\n",
+    "    with open('bmi.csv',mode='w',encoding='utf-8',newline='') as file:\n",
+    "        csv_writer = csv.DictWriter(file,fieldnames=['姓名','身高','體重','BMI','狀態'])\n",
+    "        csv_writer.writeheader()\n",
+    "        csv_writer.writerows(students)\n",
+    "\n"
    ]
   }
  ],
