--- a/lesson7/lesson7_4.ipynb
+++ b/lesson7/lesson7_4.ipynb
@@ -179,6 +179,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## list[dict]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -233,6 +240,130 @@
     "        csv_writer.writeheader()\n",
     "        csv_writer.writerows(students)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## list[BMI]->list[dict]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import csv\n",
+    "\n",
+    "def get_names(naums:int=2)->list[str]:\n",
+    "    with open('names.txt',mode='r',encoding='utf-8') as file:\n",
+    "        namse_str = file.read()\n",
+    "    names = namse_str.split(sep='\\n')\n",
+    "    names = random.choices(names,k=nums)\n",
+    "    return names\n",
+    "\n",
+    "class BMI():\n",
+    "    def __init__(self,name:str,height:int,weight:int):\n",
+    "        self.name = name\n",
+    "        self.height = height\n",
+    "        self.weight = weight\n",
+    "\n",
+    "    def get_bmi(self)->float:\n",
+    "        return round(self.weight / (self.height / 100)**2,ndigits=2)\n",
+    "\n",
+    "    def get_status(self)->str:\n",
+    "        bmi = self.get_bmi()\n",
+    "        if bmi >= 35:\n",
+    "            status = \"重度肥胖\"\n",
+    "        elif bmi >= 30:\n",
+    "            status = \"中度肥胖\"\n",
+    "        elif bmi >= 27:\n",
+    "            status = \"輕度肥胖\"\n",
+    "        elif bmi >= 24:\n",
+    "            status = \"過重\"\n",
+    "        elif bmi >= 18.5:\n",
+    "            status = \"正常範圍\"\n",
+    "        else:\n",
+    "            status = \"體重過輕\"\n",
+    "        return status        \n",
+    "\n",
+    "def get_bmi(names:list[str])->list[BMI]:\n",
+    "    students:list[BMI] = []\n",
+    "    for name in names :\n",
+    "        height = random.randint(150,210)\n",
+    "        weight = random.randint(60,110)\n",
+    "        stu_bmi = BMI(name=name , height=height ,weight=weight)\n",
+    "        students.append(stu_bmi)\n",
+    "    return students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "姓名:劉慧君\n",
+      "身高:163\n",
+      "體重:91\n",
+      "BMI:34.25\n",
+      "狀態:中度肥胖\n",
+      "====================\n",
+      "姓名:楊建安\n",
+      "身高:192\n",
+      "體重:95\n",
+      "BMI:25.77\n",
+      "狀態:過重\n",
+      "====================\n",
+      "姓名:黃雅慧\n",
+      "身高:178\n",
+      "體重:86\n",
+      "BMI:27.14\n",
+      "狀態:輕度肥胖\n",
+      "====================\n",
+      "姓名:林義皓\n",
+      "身高:182\n",
+      "體重:62\n",
+      "BMI:18.72\n",
+      "狀態:正常範圍\n",
+      "====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    try:\n",
+    "        nums = int(input(\"請輸入數量:\"))\n",
+    "        names:list[str] = get_names(naums=nums)\n",
+    "        students:list[BMI] = get_bmi(names=names)\n",
+    "        student_dict:list[dict] = []\n",
+    "        for student in students:\n",
+    "            print(f'姓名:{student.name}')\n",
+    "            print(f'身高:{student.height}')\n",
+    "            print(f'體重:{student.weight}')\n",
+    "            print(f'BMI:{student.get_bmi()}')\n",
+    "            print(f'狀態:{student.get_status()}')\n",
+    "            print('='*20)\n",
+    "            dict = {\n",
+    "                '姓名':student.name,\n",
+    "                '身高(cm)':student.height,\n",
+    "                '體重(kg)':student.weight,\n",
+    "                'BMI':student.get_bmi(),\n",
+    "                '狀態':student.get_status()\n",
+    "            }\n",
+    "            student_dict.append(dict)\n",
+    "        with open('bmi.csv',mode='w',encoding='utf-8',newline='') as file:\n",
+    "            writer = csv.DictWriter(file,fieldnames=['姓名','身高(cm)','體重(kg)','BMI','狀態'])\n",
+    "            writer.writeheader()\n",
+    "            writer.writerows(student_dict)\n",
+    "    except:\n",
+    "        print(\"輸入格式錯誤\")\n"
    ]
   }
  ],
