--- a/lesson7/lesson7_4.ipynb
+++ b/lesson7/lesson7_4.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,36 +302,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "姓名:劉慧君\n",
-      "身高:163\n",
-      "體重:91\n",
-      "BMI:34.25\n",
-      "狀態:中度肥胖\n",
-      "====================\n",
-      "姓名:楊建安\n",
-      "身高:192\n",
-      "體重:95\n",
-      "BMI:25.77\n",
+      "姓名:陳倩妮\n",
+      "身高:191\n",
+      "體重:96\n",
+      "BMI:26.32\n",
       "狀態:過重\n",
       "====================\n",
-      "姓名:黃雅慧\n",
-      "身高:178\n",
-      "體重:86\n",
-      "BMI:27.14\n",
+      "姓名:黃必琪\n",
+      "身高:180\n",
+      "體重:95\n",
+      "BMI:29.32\n",
       "狀態:輕度肥胖\n",
       "====================\n",
-      "姓名:林義皓\n",
-      "身高:182\n",
-      "體重:62\n",
-      "BMI:18.72\n",
+      "姓名:陳志偉\n",
+      "身高:198\n",
+      "體重:79\n",
+      "BMI:20.15\n",
       "狀態:正常範圍\n",
+      "====================\n",
+      "姓名:劉萬季\n",
+      "身高:201\n",
+      "體重:105\n",
+      "BMI:25.99\n",
+      "狀態:過重\n",
+      "====================\n",
+      "姓名:陳逸凡\n",
+      "身高:152\n",
+      "體重:77\n",
+      "BMI:33.33\n",
+      "狀態:中度肥胖\n",
       "====================\n"
      ]
     }
@@ -364,6 +370,36 @@
     "            writer.writerows(student_dict)\n",
     "    except:\n",
     "        print(\"輸入格式錯誤\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 美化字典\n",
+    "- pprint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'BMI': 26.32, '姓名': '陳倩妮', '狀態': '過重', '身高(cm)': 191, '體重(kg)': 96},\n",
+      " {'BMI': 29.32, '姓名': '黃必琪', '狀態': '輕度肥胖', '身高(cm)': 180, '體重(kg)': 95},\n",
+      " {'BMI': 20.15, '姓名': '陳志偉', '狀態': '正常範圍', '身高(cm)': 198, '體重(kg)': 79},\n",
+      " {'BMI': 25.99, '姓名': '劉萬季', '狀態': '過重', '身高(cm)': 201, '體重(kg)': 105},\n",
+      " {'BMI': 33.33, '姓名': '陳逸凡', '狀態': '中度肥胖', '身高(cm)': 152, '體重(kg)': 77}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint( student_dict)"
    ]
   }
  ],
