--- a/lesson8/lesson8_2.ipynb
+++ b/lesson8/lesson8_2.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
     "from io import StringIO\n",
     "import csv\n",
     "\n",
-    "data:str = r.text  \n",
+    "data:str = r.text  #文字檔\n",
     "file = StringIO(data)    #StringIO(data) 會把傳入的'字串' data 當作'檔案內容'，並返回一個可以讀取和寫入的類似檔案物件。\n",
     "dictReader = csv.DictReader(file,fieldnames=['sitename','county','aqi','status','pm2.5','datacreationdate','longitude'],restkey='不要')\n",
     "next(dictReader)\n",
