--- a/lesson11/lesson11_3.ipynb
+++ b/lesson11/lesson11_3.ipynb
@@ -134,8 +134,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## hk"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +160,7 @@
     "import matplotlib.pyplot as plt \n",
     "\n",
     "labels = ['Nokia', 'Samsung', 'Apple', 'Lumia']\n",
-    "values = [20,30,45,10]\n",
+    "values = [20, 30, 45, 10]\n",
     "colors = ['yellow', 'green', 'red', 'blue']\n",
     "\n",
     "pie = plt.pie(x=values, labels=labels, colors=colors, autopct='%1.1f%%', startangle=180, shadow=True, explode=(0.3,0,0,0))\n",
