--- a/lesson11/lesson11_3.ipynb
+++ b/lesson11/lesson11_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,14 @@
     "values = [20, 30, 45, 10]\n",
     "colors = ['yellow', 'green', 'red', 'blue']\n",
     "\n",
-    "pie = plt.pie(x=values, labels=labels, colors=colors, autopct='%1.1f%%', startangle=180, shadow=True, explode=(0.3,0,0,0))\n",
+    "pie = plt.pie(x=values, \n",
+    "              labels=labels, \n",
+    "              colors=colors, \n",
+    "              autopct='%1.1f%%', \n",
+    "              startangle=180, \n",
+    "              shadow=True, \n",
+    "              explode=(0.3,0,0,0)\n",
+    "              )\n",
     "\n",
     "plt.show()"
    ]
