--- a/lesson12/lesson12_6.ipynb
+++ b/lesson12/lesson12_6.ipynb
@@ -9,86 +9,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "姓名:楊綺芬\n",
-      "身高:168\n",
-      "體重:82\n",
-      "BMI:29.05\n",
-      "狀態:輕度肥胖\n",
-      "===========================\n",
-      "姓名:鞠冠宇\n",
-      "身高:169\n",
-      "體重:108\n",
-      "BMI:37.81\n",
-      "狀態:重度肥胖\n",
-      "===========================\n",
-      "姓名:景歡燦\n",
-      "身高:167\n",
+      "姓名:余丞苓\n",
+      "身高:152\n",
       "體重:53\n",
-      "BMI:19.0\n",
+      "BMI:22.94\n",
       "狀態:正常範圍\n",
       "===========================\n",
-      "姓名:杜儀鳳\n",
+      "姓名:陳淑萍\n",
+      "身高:174\n",
+      "體重:72\n",
+      "BMI:23.78\n",
+      "狀態:正常範圍\n",
+      "===========================\n",
+      "姓名:簡佳樺\n",
       "身高:162\n",
-      "體重:60\n",
-      "BMI:22.86\n",
-      "狀態:正常範圍\n",
-      "===========================\n",
-      "姓名:錢欣潔\n",
-      "身高:189\n",
-      "體重:57\n",
-      "BMI:15.96\n",
-      "狀態:體重過輕\n",
-      "===========================\n",
-      "姓名:黃健發\n",
-      "身高:177\n",
-      "體重:75\n",
-      "BMI:23.94\n",
-      "狀態:正常範圍\n",
-      "===========================\n",
-      "姓名:陳怡伶\n",
-      "身高:148\n",
-      "體重:95\n",
-      "BMI:43.37\n",
-      "狀態:重度肥胖\n",
-      "===========================\n",
-      "姓名:陳逸凡\n",
-      "身高:162\n",
-      "體重:106\n",
-      "BMI:40.39\n",
-      "狀態:重度肥胖\n",
-      "===========================\n",
-      "姓名:郭坤花\n",
-      "身高:172\n",
-      "體重:57\n",
-      "BMI:19.27\n",
-      "狀態:正常範圍\n",
-      "===========================\n",
-      "姓名:潘俊賢\n",
-      "身高:181\n",
-      "體重:86\n",
-      "BMI:26.25\n",
-      "狀態:過重\n",
-      "===========================\n",
-      "基本資料   姓名   身高   體重    BMI    狀態\n",
-      "學號                              \n",
-      "1     楊綺芬  168   82  29.05  輕度肥胖\n",
-      "2     鞠冠宇  169  108  37.81  重度肥胖\n",
-      "3     景歡燦  167   53  19.00  正常範圍\n",
-      "4     杜儀鳳  162   60  22.86  正常範圍\n",
-      "5     錢欣潔  189   57  15.96  體重過輕\n",
-      "6     黃健發  177   75  23.94  正常範圍\n",
-      "7     陳怡伶  148   95  43.37  重度肥胖\n",
-      "8     陳逸凡  162  106  40.39  重度肥胖\n",
-      "9     郭坤花  172   57  19.27  正常範圍\n",
-      "10    潘俊賢  181   86  26.25    過重\n"
+      "體重:89\n",
+      "BMI:33.91\n",
+      "狀態:中度肥胖\n",
+      "===========================\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>基本資料</th>\n",
+       "      <th>姓名</th>\n",
+       "      <th>身高</th>\n",
+       "      <th>體重</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>狀態</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>余丞苓</td>\n",
+       "      <td>152</td>\n",
+       "      <td>53</td>\n",
+       "      <td>22.94</td>\n",
+       "      <td>正常範圍</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>陳淑萍</td>\n",
+       "      <td>174</td>\n",
+       "      <td>72</td>\n",
+       "      <td>23.78</td>\n",
+       "      <td>正常範圍</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>簡佳樺</td>\n",
+       "      <td>162</td>\n",
+       "      <td>89</td>\n",
+       "      <td>33.91</td>\n",
+       "      <td>中度肥胖</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "基本資料   姓名   身高  體重    BMI    狀態\n",
+       "學號                             \n",
+       "1     余丞苓  152  53  22.94  正常範圍\n",
+       "2     陳淑萍  174  72  23.78  正常範圍\n",
+       "3     簡佳樺  162  89  33.91  中度肥胖"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -163,7 +186,7 @@
     "    df1 = pd.DataFrame(file_dict, index=range(1,nums + 1))\n",
     "    df1.index.name='學號'\n",
     "    df1.columns.name='基本資料'\n",
-    "    print(df1)\n"
+    "df1\n"
    ]
   }
  ],
